# cgl

./: CMakeLists.txt  README.md  cgl.h
gl/: program.cc  program.cpp  program.h  shader.cc  shader.h  texture.cc  texture.h  uniform.cc  uniform.h  viewport.cpp  viewport.h
math/: cgl_math.h  matrix2.h  matrix3.h  matrix4.h  transform.h  vector2.h  vector3.h  vector4.h
util/: bitmap_font.cc  bitmap_font.cpp  bitmap_font.h  bitmap_image.cc  bitmap_image.h  camera.cc  camera.cpp  camera.h  obj_loader.cpp  obj_loader.h  text_renderer.cc  text_renderer.cpp  text_renderer.h
